项目顶层readme更新
项目顶层readme更新，主要从宏观层面介绍项目名，不做微观的介绍

--- a/lfp_documents/CN/mkdocs.yml
+++ b/lfp_documents/CN/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
         - double_list: modules/double_list/double_list.md
         - socket_app: modules/socket_app/socket_app.md
     - rules.make: rules.make/rules.make.md
+    - tools: tools/stats_tools.md
 - extensions:
     - common knowledge: extensions/knowledge_extensions.md
     - whiptail: extensions/whiptail.md
