更新文档架构，增加编码规则描述
更新文档架构，增加编码规则描述

--- a/lfp_documents/CN/mkdocs.yml
+++ b/lfp_documents/CN/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - main: main/main.md
     - menuconfig: menuconfig/menuconfig.md
     - rules.make: rules.make/rules.make.md
+    - programming rules: programming_rules/programming_rules.md
     - modules:
         - about: modules/module.md
         - single_list: modules/single_list/single_list.md
