文件目录架构调整
文件目录架构调整，将头文件全部移植到/lfp_include下统一管理，模块内部的头文件也放在此处统一管理。模块和头文件剥离。

--- a/lfp_arch/linux/makefile
+++ b/lfp_arch/linux/makefile
@@ -8,7 +8,7 @@ CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
 INCLUDE_PATH := -Iinclude
-#INCLUDE_PATH += -I../../lfp_include/lfp_arch_adapter/
+INCLUDE_PATH += -I../../lfp_include/
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
