架构调整，优化目录层次和头文件暴露层次
架构调整，优化目录层次和头文件暴露层次。

--- a/lfp_arch_adapter/makefile
+++ b/lfp_arch_adapter/makefile
@@ -7,9 +7,9 @@ CUR_SRC_PATH = $(shell pwd)/src
 CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
-INCLUDE_PATH := -I__include
-INCLUDE_PATH += -I../lfp_arch/linux/include/
-INCLUDE_PATH += -I../lfp_include/lfp_arch_adapter/
+INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/__include
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
