--- a/lfp_modules/lfp_single_list/makefile
+++ b/lfp_modules/lfp_single_list/makefile
@@ -9,8 +9,7 @@ CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
 lfp_modules_path = $(firstword $(subst lfp_modules,lfp_modules , $(PWD)))
 
-INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/__include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_modules/lfp_single_list
+INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/lfp_modules/lfp_single_list
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
