--- a/lfp_arch/linux/makefile
+++ b/lfp_arch/linux/makefile
@@ -1,5 +1,5 @@
 ifeq ($(LFP_ROOT_PATH),)
-LFP_ROOT_PATH = ../../
+LFP_ROOT_PATH = ../..
 endif
 
 include $(LFP_ROOT_PATH)/rules.make
@@ -7,9 +7,9 @@ CUR_SRC_PATH = $(shell pwd)/src
 CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
-INCLUDE_PATH := -Iinclude
-INCLUDE_PATH += -I../../lfp_include/
-
+INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/linux
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/linux/__include
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
 LIB_OS = liblfp_arch_linux.a
