修改项目底层架构
修改底层架构。1、文件目录架构；2、数据结构转封装；3、细化注释信息

--- a/lfp_main/makefile
+++ b/lfp_main/makefile
@@ -12,6 +12,7 @@ INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/__include/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_util/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/__include/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_modules/
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
