--- a/lfp_modules/lfp_socket_app/makefile
+++ b/lfp_modules/lfp_socket_app/makefile
@@ -9,8 +9,12 @@ CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
 lfp_modules_path = $(firstword $(subst lfp_modules,lfp_modules , $(PWD)))
 
-INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/__include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_modules/
+INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/__include/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_util/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_modules/lfp_socket_app/
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
