修改头文件暴露架构，解决编译问题
1、修改头文件暴露架构，解决编译问题；
2、解决平台层<---->系统层的宏定义适配问题；

--- a/lfp_arch/linux/makefile
+++ b/lfp_arch/linux/makefile
@@ -8,8 +8,10 @@ CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
 INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/linux
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/linux/__include
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/__include/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/linux/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/linux/__include/
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
 LIB_OS = liblfp_arch_linux.a
