--- a/lfp_util/makefile
+++ b/lfp_util/makefile
@@ -4,12 +4,14 @@ endif
 
 include $(LFP_ROOT_PATH)/rules.make
 
-CUR_SRC_PATH := $(shell pwd)/lfp_util
+CUR_SRC_PATH := $(shell pwd)/
 
 CUR_SRC = $(foreach dir, $(CUR_SRC_PATH), $(wildcard ${dir}/*.c))
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
 INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/lfp_util/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/__include/
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
