--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Disabled",
+    "files.exclude": {
+        "**/.d": true,
+        "**/.gitattributes": true,
+        "**/.o": true,
+        "**/.vscode": true
+    }
 }
