--- a/lfp_util/makefile
+++ b/lfp_util/makefile
@@ -2,7 +2,7 @@ ifeq ($(LFP_ROOT_PATH),)
 LFP_ROOT_PATH = ../
 endif
 
-include $(LFP_ROOT_PATH)/rules.make
+include $(LFP_ROOT_PATH)/lfp_rules.make
 
 CUR_SRC_PATH := $(shell pwd)/
 
