--- a/lfp_arch/linux/makefile
+++ b/lfp_arch/linux/makefile
@@ -2,7 +2,7 @@ ifeq ($(LFP_ROOT_PATH),)
 LFP_ROOT_PATH = ../..
 endif
 
-include $(LFP_ROOT_PATH)/rules.make
+include $(LFP_ROOT_PATH)/lfp_rules.make
 CUR_SRC_PATH = $(shell pwd)/src
 CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
