--- a/lfp_app_modules/lfp_socket_app/makefile
+++ b/lfp_app_modules/lfp_socket_app/makefile
@@ -7,15 +7,15 @@ CUR_SRC_PATH = $(shell pwd)/src
 CUR_SRC = $(wildcard $(CUR_SRC_PATH)/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
-lfp_modules_path = $(firstword $(subst lfp_modules,lfp_modules , $(PWD)))
+lfp_modules_path = $(firstword $(subst lfp_app_modules,lfp_app_modules , $(PWD)))
 
 INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/__include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_util/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/include/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_base_util/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/__include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_modules/lfp_socket_app/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/include/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_modules/lfp_socket_app/
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
