--- a/lfp_documents/mkdocs.yml
+++ b/lfp_documents/mkdocs.yml
@@ -5,12 +5,14 @@ dev_addr: localhost:10086
 
 # Repository
 repo_name: lfp_tech_advance
-repo_url: https://lee91.github.io/lfp_tech_advance/
+repo_url: https://github.com/Lee91/lfp_tech_advance
 edit_uri: ""
 site_author: wytaitaislee
 
 site_description: >-
-  技术演进
+  保持技术热情，将所见所闻探本溯源。</br>
+  一方面拓实基础，另一方面学习优秀开源项目的架构思想，不断提升自己的技术视野
+
 
 # Copyright
 copyright: Copyright &copy; 2019 - 2021 wytaitaislee
@@ -26,7 +28,7 @@ nav:
     - arch: arch/arch.md
     - arch adapter: arch_adapter/arch_adapter.md
 - 应用模块:
-    - about: app_modules/module.md
+    - about: app_modules/modules.md
     - single_list: app_modules/single_list/single_list.md
     - double list: app_modules/double_list/double_list.md
     - socket app: app_modules/socket_app/socket_app.md
