--- a/lfp_app/lfp_app_libs/lfp_libs_slist/makefile
+++ b/lfp_app/lfp_app_libs/lfp_libs_slist/makefile
@@ -1,26 +1,28 @@
-ifeq ($(LFP_ROOT_PATH),)
-LFP_ROOT_PATH = ../../
+ifeq ($(LFP_PRJ_NAME)$(LFP_ROOT_PATH),)
+LFP_PRJ_NAME = lfp_tech_advance
+LFP_ROOT_PATH = $(firstword $(subst ${LFP_PRJ_NAME},${LFP_PRJ_NAME} ,$(shell pwd)))
 endif
+include ${LFP_ROOT_PATH}/lfp_rules.make
 
-include $(LFP_ROOT_PATH)/lfp_rules.make
 CUR_SRC_PATH = $(shell pwd)/src
 CUR_SRC = $(wildcard $(CUR_SRC_PATH)/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
-lfp_modules_path = $(firstword $(subst lfp_app_modules,lfp_app_modules , $(PWD)))
+lfp_app_libs_path = $(firstword $(subst lfp_app_libs,lfp_app_libs , $(PWD)))
 
 INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/include/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_base_util/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_modules/lfp_single_list/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_libs/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_libs/lfp_libs_slist/
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
-LIB_OS = liblfp_single_list.a
+LIB_OS = liblfp_slist.a
 
 ${LIB_OS}:$(CUR_OBJS)
 	$(LFP_AR) $(LFP_AR_FLAGS) $@ $^
-	cp $@ ${lfp_modules_path}
+	cp $@ ${lfp_app_libs_path}
 
 %.o:%.c
 	$(LFP_CC) $(CFLAGS) -c -o $@ $^
