--- a/lfp_arch/windows/makefile
+++ b/lfp_arch/windows/makefile
@@ -1,8 +1,9 @@
-ifeq ($(LFP_ROOT_PATH),)
-LFP_ROOT_PATH = ../../
+ifeq ($(LFP_PRJ_NAME)$(LFP_ROOT_PATH),)
+LFP_PRJ_NAME = lfp_tech_advance
+LFP_ROOT_PATH = $(firstword $(subst ${LFP_PRJ_NAME},${LFP_PRJ_NAME} ,$(shell pwd)))
 endif
+include ${LFP_ROOT_PATH}/lfp_rules.make
 
-include $(LFP_ROOT_PATH)/lfp_rules.make
 CUR_SRC_PATH = $(shell pwd)/src
 CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
