--- a/lfp_main/makefile
+++ b/lfp_main/makefile
@@ -1,8 +1,9 @@
-ifeq ($(LFP_ROOT_PATH),)
-LFP_ROOT_PATH = ../
+ifeq ($(LFP_PRJ_NAME)$(LFP_ROOT_PATH),)
+LFP_PRJ_NAME = lfp_tech_advance
+LFP_ROOT_PATH = $(firstword $(subst ${LFP_PRJ_NAME},${LFP_PRJ_NAME} ,$(shell pwd)))
 endif
+include ${LFP_ROOT_PATH}/lfp_rules.make
 
-include $(LFP_ROOT_PATH)/lfp_rules.make
 CUR_SRC_PATH = $(shell pwd)/src
 CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
@@ -13,8 +14,8 @@ INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_base_util/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_modules/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_busybox/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app/lfp_app_libs/
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 LIB_OS = liblfp_main.a
