--- a/lfp_app/lfp_app_busybox/makefile
+++ b/lfp_app/lfp_app_busybox/makefile
@@ -4,7 +4,7 @@ LFP_ROOT_PATH = $(firstword $(subst ${LFP_PRJ_NAME},${LFP_PRJ_NAME} ,$(shell pwd
 endif
 include ${LFP_ROOT_PATH}/lfp_rules.make
 
-CUR_SRC_PATH := $(shell pwd)/
+CUR_SRC_PATH := $(shell pwd)/src/
 
 CUR_SRC = $(foreach dir, $(CUR_SRC_PATH), $(wildcard ${dir}/*.c))
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
