修改编译架构
修改编译架构

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "linux_pthread.h": "c",
         "lfp_socket_app.h": "c",
         "lfp_libs_slist.h": "c",
-        "lfp_libs_dlist.h": "c"
+        "lfp_libs_dlist.h": "c",
+        "lfp_app_init.h": "c"
     }
 }
