--- a/lfp_app/lfp_app_libs/lfp_libs_socket/makefile
+++ b/lfp_app/lfp_app_libs/lfp_libs_socket/makefile
@@ -2,13 +2,11 @@ ifeq ($(LFP_PRJ_NAME)$(LFP_ROOT_PATH),)
 LFP_PRJ_NAME = lfp_tech_advance
 LFP_ROOT_PATH = $(firstword $(subst ${LFP_PRJ_NAME},${LFP_PRJ_NAME} ,$(shell pwd)))
 endif
-include ${LFP_ROOT_PATH}/lfp_rules.make
+include $(LFP_ROOT_PATH)/lfp_rules.make
 
 CUR_SRC_PATH = $(shell pwd)/src
 CUR_SRC = $(wildcard $(CUR_SRC_PATH)/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
-
-lfp_app_libs_path = $(firstword $(subst lfp_app_libs,lfp_app_libs , $(PWD)))
 
 INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/include/
@@ -21,11 +19,11 @@ INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_libs/lfp_libs_socket/
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
-LIB_OS = liblfp_socket.a
+LIB_SOCKET = liblfp_libs_socket.a
 
-${LIB_OS}:$(CUR_OBJS)
+$(LIB_SOCKET):$(CUR_OBJS)
 	$(LFP_AR) $(LFP_AR_FLAGS) $@ $^
-	cp $@ ${lfp_app_libs_path}
+	cp $@ $(LFP_OBJ_PATH)
 
 %.o:%.c
 	$(LFP_CC) $(CFLAGS) -c -o $@ $^
