--- a/lfp_arch_adapter/makefile
+++ b/lfp_arch_adapter/makefile
@@ -1,10 +1,11 @@
-ifeq ($(LFP_ROOT_PATH),)
-LFP_ROOT_PATH = ../
+ifeq ($(LFP_PRJ_NAME)$(LFP_ROOT_PATH),)
+LFP_PRJ_NAME = lfp_tech_advance
+LFP_ROOT_PATH = $(firstword $(subst ${LFP_PRJ_NAME},${LFP_PRJ_NAME} ,$(shell pwd)))
 endif
-
 include $(LFP_ROOT_PATH)/lfp_rules.make
+
 CUR_SRC_PATH = $(shell pwd)/src
-CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
+CUR_SRC = $(wildcard $(CUR_SRC_PATH)/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
 INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
@@ -18,7 +19,7 @@ CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 
 LIB_OS = liblfp_arch_adapter.a
 
-${LIB_OS}:$(CUR_OBJS)
+$(LIB_OS):$(CUR_OBJS)
 	$(LFP_AR) $(LFP_AR_FLAGS) $@ $^
 	cp $@ $(LFP_OBJ_PATH)
 
@@ -26,4 +27,4 @@ ${LIB_OS}:$(CUR_OBJS)
 	$(LFP_CC) $(CFLAGS) -c -o $@ $^
 clean:
 	@for dir in $(CUR_SRC_PATH); do rm -rf $$dir/*.o ; done
-	@rm -rf ./*.a
+	@rm -rf ./*a ./*so ./*.o
