增加链表元素的访问数据结构封装
通用型链表访问数据结构，包含offsetof，container_of，list_for_each等，便于后续应用整洁访问。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "lfp_socket_app.h": "c",
         "lfp_libs_slist.h": "c",
         "lfp_libs_dlist.h": "c",
-        "lfp_app_init.h": "c"
+        "lfp_app_init.h": "c",
+        "type_traits": "cpp"
     }
 }
