--- a/.config
+++ b/.config
@@ -1,2 +1,2 @@
 LFP_LINK_OBJS += -llfp_app_busybox
-LFP_LINK_OBJS += -llfp_libs_dlist -llfp_libs_slist -llfp_libs_socket -llfp_libs_threadpool
+LFP_LINK_OBJS += -llfp_libs_threadpool -llfp_libs_dlist -llfp_libs_slist -llfp_libs_socket
