--- a/lfp_app_base/lfp_app_libs/lfp_libs_threadpool/makefile
+++ b/lfp_app_base/lfp_app_libs/lfp_libs_threadpool/makefile
@@ -5,7 +5,7 @@ endif
 include $(LFP_ROOT_PATH)/lfp_rules.make
 
 CUR_SRC_PATH = $(shell pwd)/src
-CUR_SRC = $(wildcard $(CUR_SRC_PATH)/*.c)
+CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
 INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
@@ -26,9 +26,9 @@ $(LIB_THREADPOOL):$(CUR_OBJS)
 	$(LFP_AR) $(LFP_AR_FLAGS) $@ $^
 	cp $@ $(LFP_OBJ_PATH)
 
-%.o:%.c
+$(CUR_OBJS):$(CUR_SRC)
 	$(LFP_CC) $(CFLAGS) -c -o $@ $^
-
+	
 clean:
 	@for dir in $(CUR_SRC_PATH); do rm -rf $$dir/*.o ; done
 	@rm -rf ./*.a
