--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,8 @@
         "linux_semaphore.h": "c",
         "lfp_libs_threadpool.h": "c",
         "lfp_libs_list.h": "c",
-        "lfp_util_log.h": "c"
-    }
+        "lfp_util_log.h": "c",
+        "lfp_libs_socket.h": "c"
+    },
+    "cmake.configureOnOpen": true
 }
