--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,8 @@
         "lfp_libs_threadpool.h": "c",
         "lfp_libs_list.h": "c",
         "lfp_util_log.h": "c",
-        "lfp_libs_socket.h": "c"
+        "lfp_libs_socket.h": "c",
+        "errno.h": "c"
     },
     "cmake.configureOnOpen": true
 }
