--- a/lfp_main/makefile
+++ b/lfp_main/makefile
@@ -9,13 +9,10 @@ CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
 INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_base_util/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_util/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_arch_adapter/include/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_base/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_base/lfp_app_libs/
 
 CFLAGS = $(LFP_GLOBAL_FLAGS) $(INCLUDE_PATH)
 LIB_MAIN = liblfp_main.a
