--- a/lfp_app_base/lfp_app_libs/lfp_libs_dlist/makefile
+++ b/lfp_app_base/lfp_app_libs/lfp_libs_dlist/makefile
@@ -9,8 +9,7 @@ CUR_SRC = $(wildcard ${CUR_SRC_PATH}/*.c)
 CUR_OBJS = $(patsubst %.c, %.o, $(CUR_SRC))
 
 INCLUDE_PATH := -I${LFP_ROOT_PATH}/lfp_include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/include/
-INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_base_util/
+INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_util/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_base/lfp_app_libs/
 INCLUDE_PATH += -I${LFP_ROOT_PATH}/lfp_include/lfp_app_base/lfp_app_libs/lfp_libs_dlist/
 
